--- a/samples/BlectronSample/Pages/FetchData.cshtml
+++ b/samples/BlectronSample/Pages/FetchData.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
+@using System.IO
+@using Newtonsoft.Json
 
 <h1>Weather forecast</h1>
 
@@ -39,7 +40,8 @@ else
 
     protected override async Task OnInitAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        var forecastsJson = await File.ReadAllTextAsync("wwwroot/sample-data/weather.json");
+        forecasts = JsonConvert.DeserializeObject<WeatherForecast[]>(forecastsJson);
     }
 
     class WeatherForecast
