Fix "about" link in sample

--- a/samples/BlectronSample/wwwroot/css/site.css
+++ b/samples/BlectronSample/wwwroot/css/site.css
@@ -121,3 +121,8 @@ app {
         display: block;
     }
 }
+
+body a, body a:not([href]), body a:not([href]):not([tabindex]), body a:not([href]):not([tabindex]):hover {
+    color: #007bff;
+    cursor: pointer;
+}
