Rename all projects

--- a/samples/ComponentsElectronSample/_ViewImports.cshtml
+++ b/samples/ComponentsElectronSample/_ViewImports.cshtml
@@ -2,6 +2,6 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-@using BlectronSample
-@using BlectronSample.Shared
+@using ComponentsElectronSample
+@using ComponentsElectronSample.Shared
 @using ElectronNET.API
