--- a/samples/ComponentsElectronSample/Shared/MainLayout.cshtml
+++ b/samples/ComponentsElectronSample/Shared/MainLayout.cshtml
@@ -17,6 +17,6 @@
 @functions {
     async Task OpenAboutAsync()
     {
-        await Electron.Shell.OpenExternalAsync("http://blazor.net");
+        await Electron.Shell.OpenExternalAsync("https://docs.microsoft.com/en-us/aspnet/core/razor-components");
     }
 }
